--- a/test/wCoinsEx.xaml
+++ b/test/wCoinsEx.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
-        Height="300" Width="300" WindowStyle="ToolWindow" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Height="300" Width="300" WindowStyle="ToolWindow" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
