--- a/test/wCoinsEx.xaml
+++ b/test/wCoinsEx.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
-        Height="300" Width="300" WindowStyle="ToolWindow" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Height="300" Width="300" WindowStyle="ToolWindow" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ShowInTaskbar="False">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -23,6 +23,6 @@
             <Button Content="+" Grid.Column="2" FontSize="36" Click="Up_Click"/>
         </Grid>
         
-        <Button Content="Внести" Margin="20" Grid.Row="1" Click="Button_Click"/>
+        <Button Content="Внести" Margin="20" Grid.Row="1" Click="Button_Click" FontSize="20"/>
     </Grid>
 </Window>
